# webrtc-server

./: .env  .gitignore  Cargo.toml  README.md  get_metrics.sh  index.html  styles.css  webrtc-test.html
js/: audio.js  signaling.js  ui.js  webrtc.js
recordings/: call_20241216_084055_0b48984e-fb0e-4c35-bcbd-ad215b36aa1b.json  call_20241216_085225_cb6cfa19-95d8-49c5-88a8-d2fc24b753ef_metadata.json  call_20241216_104850_03da65c8-1587-44f4-a96e-05fc904bcdb3_metadata.json  call_20241217_000101_70fdfd36-9294-4de3-b651-b25e63fa2b73_metadata.json
src/: config.rs  lib.rs  main.rs  metrics.rs  room.rs  server.rs  types.rs
src/media/: mod.rs  recording.rs  relay.rs
src/metrics/: connection.rs  mod.rs
src/monitoring/: dashboard.rs  mod.rs
src/room/: manager.rs  mod.rs  state.rs
src/signaling/: connection_state.rs  handler.rs  messages.rs  mod.rs  server.rs  stun.rs  turn.rs
src/turn/: credentials.rs  mod.rs
src/utils/: error.rs  mod.rs
src/voip/: gateway.rs  media.rs  mod.rs  session.rs  sip_server.rs
static/: index.html  monitor.html
static/css/: styles.css
static/js/: audio.js  signaling.js  ui.js  webrtc.js
