[package]
name = "webrtc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio-tungstenite = "0.20"
futures-util = "0.3"
metrics = "0.20"  # For connection quality monitoring
parking_lot = "0.12"  # For additional concurrency primitives
