[package]
name = "webrtc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio-tungstenite = "0.20"
futures-util = "0.3"
metrics = "0.20"
parking_lot = "0.12"
webrtc = "0.11.0"  # Add WebRTC support
bytes = "1.0"   # For handling binary data
uuid = { version = "1.0", features = ["v4"] }  # For generating unique IDs
async-trait = "0.1"  # For async traits
rtp = "0.11.0"    # For RTP packet handling
