[package]
name = "webrtc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio-tungstenite = "0.20"
futures-util = "0.3"
metrics = "0.20"
parking_lot = "0.12"
webrtc = "0.11.0"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
rtp = "0.11.0"
log = "0.4"
env_logger = "0.10"
stun = "0.7.0"
warp = "0.3"
turn = "0.6.1"
util = { package = "webrtc-util", version = "0.7.0" }
clap = "3.0"

[dev-dependencies]
tokio-test = "0.4"
